# cusf_launcher

./: README.md
.github/scripts/: godot_ci_cache.py
.github/workflows/: build.yml
cusf_launcher/: .gitignore  CusfLauncherCrypto.gdextension  export_presets.cfg  global_settings.gd  icon.svg.import  project.godot
cusf_launcher/addons/cusf_launcher_crypto/: CusfLauncherCrypto.gdextension  extension_loader.gd  plugin.cfg  plugin.gd
cusf_launcher/assets/: quotes.json
cusf_launcher/image/: bitcoin.png.import
cusf_launcher/image/icon/: add.png.import  add_red.png.import  close.png.import  close_red.png.import  delete.png.import  delete_red.png.import  start.png.import  start_red.png.import  update.png.import  update_red.png.import
cusf_launcher/scene/: configuration.tscn  l2_status.tscn  main_window.tscn  minimal_wallet.tscn  resource_downloader.tscn  rpc_client.tscn
cusf_launcher/script/: configuration.gd  l2_status.gd  main_window.gd  minimal_wallet.gd  quotes.gd  resource_downloader.gd  rpc_client.gd  wallet_starter.gd
cusf_launcher/theme/: overview_flat_style_box.tres  tab_button_style_disabled.tres  tab_button_style_hover.tres  tab_button_style_normal.tres  tab_button_style_pressed.tres  theme.tres
cusf_launcher_crypto/: Cargo.toml
cusf_launcher_crypto/src/: lib.rs
